# fastapi-beyond-crud

./: .env.example  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 5c603804b021_fix_user_columns.py  72e3d8bfc0ac_add_password.py  805c18d9e361_add_password_hash_to_users.py  aa10fb0bf4c4_init.py  f8cd70ee3816_add_password_hash_to_users.py
src/: main.py
src/auth/: models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py
src/db/: main.py
